[package]
name = "arbitrary_ext"
version = "0.3.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Provides combinator functions to generate standard collections with custom arbitrary function."
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
arbitrary = { version = "1.2", features = ["derive"]}
